--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/react-dom": "^18.3.5",
     "axios": "^1.13.2",
     "firebase": "^12.6.0",
+    "lucide-react": "^0.554.0",
     "next": "^15.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
