--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "description": "A comprehensive study abroad planning application with city comparison and interactive features",
   "dependencies": {
     "@dataconnect/generated": "file:src/dataconnect-generated",
+    "@supabase/auth-helpers-nextjs": "^0.15.0",
+    "@supabase/supabase-js": "^2.89.0",
     "@types/node": "^20.0.0",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
