--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "^15.0.0",
     "ogl": "^1.0.11",
     "react": "^18.3.1",
+    "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
